--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,38 @@
-span.risk-level {
-  font-size: 300%;
-  line-height: 0.18;
-  vertical-align: bottom;
+
+
+.ticket-list li {
+  line-height: 1.2em;
+  list-style-type: none;
 }
 
-span.low-risk {
+.ticket-list li > * {
+  vertical-align: top;
+}
+
+.ticket-list li a {
+  color: black;
+  text-decoration: none;
+} 
+
+.ticket-list li a:hover {
+  text-decoration: underline;
+} 
+
+span.risk-level {
+  font-size: 44px;
+  line-height: 4px;
+  vertical-align: middle !important;
+  color: transparent;
+}
+
+#root span.low-risk {
   color: green;
 }
 
-span.medium-risk {
+#root span.medium-risk {
   color: orange;
 }
 
-span.high-risk {
+#root span.high-risk {
   color: red;
 }
